CoercionUtils: restore upstream body verbatim, keep only boundary adapter
Reduce this file to its minimal delta vs main: the only necessary change
is that PPLTypeChecker.getParameterTypes() on this branch returns
List<List<RelDataType>> (upstream returns List<List<ExprType>>). Adapt
at the entry of castArguments; everything else is main-branch code.

Delete the parallel CoercionTag lattice, PARENTS map, normalizeTemporalToUdt,
and the RelDataType-flavored resolveCommonType / max / distance helpers
introduced in the earlier version of this file. The upstream ExprType-based
lattice is the source of truth for widening, and the RelDataType→ExprType
conversion via convertRelDataTypeToExprType at the public boundary handles
UDTs uniformly.

Test: StubTypeChecker.getParameterTypes now returns List<List<RelDataType>>
to match the branch's PPLTypeChecker interface. Substitute
SqlTypeName.GEOMETRY for ExprCoreType.GEO_POINT in the
no-compatible-signature test since GEO_POINT isn't in
convertExprTypeToRelDataType's switch.

Signed-off-by: Peng Huo <penghuo@gmail.com>